assets/styles/style.css
/* Global */

:root {
  --color-primary: #cc603e;
  --color-offwhite: #fafafa;
  --color-offblack: #222;
  --color-darkgrey: #555;
  --color-lightgrey: #aaa;
  --color-superlightgrey: #ddd;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: var(--color-offwhite);
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
footer > * {
  font-family: "Poppins", sans-serif;
}

header {
  height: 100vh;
  min-height: 800px;
  width: 1300px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

#name-container {
  margin: 0 50px 0 0;
}

h1 {
  font-size: 4em;
  font-weight: 700;
  margin: 0;
  color: var(--color-offblack);
}

#name-container > h1 span {
  color: var(--color-primary);
}

#rotating-title-container {
  background-color: var(--color-offwhite);
  position: relative;
  height: 6em;
  margin: 0;
  display: inline-block;
  overflow: hidden;
}

#rotating-title-container::before,
#rotating-title-container::after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  height: 0.75em;
  z-index: 1;
}

#rotating-title-container::before {
  top: 0;
  background: linear-gradient(to top, transparent, var(--color-offwhite));
}

#rotating-title-container::after {
  bottom: 0;
  background: linear-gradient(to bottom, transparent, var(--color-offwhite));
}

#rotating-title-container h1 {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

header img {
  width: 50%;
  margin: 0;
  padding: 0;
}

/* Sections */

section {
  width: 1300px;
  margin: 25px 0 150px 0;
  display: flex;
  flex-direction: column;
  align-items: center;
}

h2 {
  text-align: center;
  color: var(--color-offblack);
  font-size: 2.5em;
  margin: 0;
}

section a {
  font-size: 1.25em;
  font-weight: 500;
  margin: 50px 0;
  text-decoration: none;
  color: var(--color-offwhite);
  background-color: var(--color-primary);
  padding: 20px 50px;
  border-radius: 5px;
  border: 2px solid var(--color-primary);
  transition: background-color 0.3s ease;
}

section a:hover {
  background-color: var(--color-offwhite);
  color: var(--color-primary);
}
/* Skills */

#skillContainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  width: 100%;
  margin: 50px 0;
}

#skillContainer h3 {
  font-size: 4em;
  margin: 20px 40px;
  color: var(--color-primary);
}

/* Projects */

#cardContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin: 50px 0;
}

.card {
  /* display: flex;
  flex-direction: row;
  justify-content: space-between; */
  /* align-items: center; */
  width: 100%;
  padding: 30px;
  margin: 15px;
  background-color: white;
  border-radius: 10px;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
  /* transition: height 0.5s ease; */
  /* overflow: hidden; */
}

/* .card.active {
  height: 500px;
} */

.card h3 {
  font-size: 2em;
  margin: 0;
  color: var(--color-offblack);
}

.card p {
  margin: 1em 0 0 0;
}

.card img {
  width: 50%;
}

/* Footer */

footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 50px;
  width: calc(100% - 100px);
  padding: 0px 50px;
  background-color: var(--color-superlightgrey);
}

footer a,
footer p {
  text-decoration: none;
  font-weight: 300;
  color: var(--color-darkgrey);
  display: inline;
}

footer p:first-child {
  text-align: left;
}

footer a {
  text-align: center;
  display: flex;
  flex-direction: row;
  align-items: center;
}

footer p:last-child {
  text-align: right;
}

footer a:hover {
  text-decoration: underline;
}

footer svg {
  fill: var(--color-darkgrey);
  margin: 0 0 0 5px;
}

/* Smaller Desktop Display */

@media only screen and (max-width: 1500px) {
  header {
    width: 1000px;
    min-height: 650px;
  }

  section {
    width: 1000px;
  }

  h1 {
    font-size: 3em;
  }

  #skillContainer h3 {
    font-size: 3em;
    margin: 15px 30px;
  }
}

/* Large Mobile (Tablet) */

@media only screen and (max-width: 1100px) {
  header {
    flex-direction: column;
    width: 600px;
    min-height: 700px;
    height: 90vh;
  }

  section {
    width: 600px;
    max-width: 80vw;
  }

  #name-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 0 50px 0;
  }

  h1 {
    font-size: 2.5em;
    text-align: center;
  }

  #rotating-title-container {
    height: 4em;
  }

  header img {
    width: 75%;
  }

  #skillContainer h3 {
    font-size: 2.5em;
    margin: 15px 25px;
  }

  h2 {
    font-size: 2em;
  }

  footer {
    padding: 0px 25px;
    width: calc(100% - 50px);
  }

  footer a,
  footer p {
    font-size: 0.75em;
  }

  footer svg {
    height: 0.75em;
    width: 0.75em;
  }
}

/* Mobile */

@media only screen and (max-width: 600px) {
  header {
    width: 100vw;
  }

  h2 {
    width: 80%;
  }

  footer a {
    text-decoration: underline;
  }

  footer svg {
    display: none;
  }
}

/* Small Mobile */

@media only screen and (max-width: 400px) {
  body {
    min-width: 320px;
  }

  header {
    min-height: 550px;
    min-width: 320px;
  }

  section {
    width: 310px;
  }

  #cardContainer {
    margin: 0;
  }

  h1 {
    font-size: 2em;
  }

  #skillContainer h3 {
    font-size: 2em;
    margin: 10px 20px;
  }

  h2 {
    font-size: 1.5em;
  }

  .card h3 {
    font-size: 1.5em;
  }
}

